[package]
name = "isilon"
description = "Isilon rest api bindings"
homepage = "https://github.com/cholcombe973/isilon"
documentation = "https://docs.rs/isilon"
repository = "https://github.com/cholcombe973/isilon"
license = "MIT"
version = "4.0.0"
authors = ["xfactor973@gmail.com"]

[dependencies]
cookie = "~0.11"
log = "~0.4"
reqwest = "~0.8"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
base64 = "~0.9.0"
futures = "0.1.16"
hyper = "~0.11"
url = "1.7"

[dev-dependencies]
tokio-core = "~0.1"
