[package]
name = "isilon"
description = "Isilon rest api bindings"
homepage = "https://github.com/cholcombe973/isilon"
documentation = "https://docs.rs/isilon"
repository = "https://github.com/cholcombe973/isilon"
license = "MIT"
version = "5.0.1"
authors = ["xfactor973@gmail.com"]
edition = "2018"

[dependencies]
base64 = "~0.10"
cookie = "~0.11"
log = "~0.4"
reqwest = "~0.9"
serde = "~1.0"
serde_derive = "~1.0"
serde_yaml = "~0.8"
serde_json = "~1.0"
futures = "~0.1"
hyper = "~0.12"
url = "~1.7"

[dev-dependencies]
tokio-core = "~0.1"
